gitops-main/base/services/api-gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http

# Denne service-fil opretter et internt endpoint for API Gateway systemet.
# Den bruger ClusterIP, hvilket betyder at den kun er tilgængelig internt i Kubernetes clusteret.
# Den lytter på port 8080 og dirigerer trafik til de pods der matcher labelen app: api-gateway.
