gitops-main/base/services/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: api-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: swwao-courses.orbit.au.dk
      http:
        paths:
          - path: /grp-7/api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

# Denne Ingress-fil opretter en offentlig adgang til API Gateway fra internettet.
# Når nogen skriver https://swwao-courses.orbit.au.dk/grp-7/api i deres browser,
# dirigerer nginx dem til API Gateway servicen på port 8080.
